tests/variables/invalid/var_declared_late.su
s32 main() {
    a = 1 + 2;
    s32 a;
    return a;
}